2006-11-03  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/StyleSheet.java
	(addRule): Implemented.
	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.inStyleTag): New field.
	(HTMLReader.styles): New field.
	(HTMLReader.HeadAction.end): Implemented to read all stylesheets,
	if any.
	(HTMLReader.StyleAction.start): Set inStyleTag flag.
	(HTMLReader.StyleAction.end): Set inStyleTag flag.
	(HTMLReader.handleText): When inside a style tag, add
	content to the styles array.

2006-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/FormView.java
	(maxIsPreferred): New field.
	(createComponent): Initialize components correctly.
	(getMaximumSpan): Return the preferred span for components
	that need this. The maxIsPreferred flag is set accordingly
	in createComponent.
	* javax/swing/text/html/HTMLDocument.java
	(HTMLReader.FormAction.start): Implemented to set the
	correct model as attribute.
	(HTMLReader.FormAction.setModel): New helper method.
	(HTMLReader.FormAction.end): Call super to finish the element.
	Added TODO about things left to do.
	(HTMLReader.handleComment): Use SimpleAttributeSet rather
	than htmlAttributeSet.
	* javax/swing/text/html/HTMLEditorKit.java
	(HTMLFactory.create): Create BlockView for FORM tags.
	Create FormView for INPUT, TEXTAREA and SELECT tags.

2006-11-02  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/geom/GeneralPath.java: API doc fixes.

2006-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/html/ImageView.java
	(getImageURL): Fetch attribute from element. Consider the
	base URL for relative image locations.

2006-11-02  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JEditorPane.java
	(setContentType): Strip off attributes.
	* javax/swing/text/html/HTMLEditorKit.java
	(LinkController.activateLink(int,JEditorPane,int,int): New
	method. Implements activation of a hyperlink.
	(LinkController.activateLinke(int,JEditorPane)): Delegate
	to the other activateLink() method.