@@ -1,5 +1,10 @@
 2006-11-03  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/text/html/HTMLDocument.java
+	(HTMLReader.IsindexAction.start): Implemented.
+
+2006-11-03  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/text/html/StyleSheet.java
 	(addRule): Implemented.
 	* javax/swing/text/html/HTMLDocument.java
